# Veriqo

./: .gitignore  README.md  SECURITY.md  veriqo-api.service
apps/api/: .env.example  alembic.ini  init_db.py  pyproject.toml  requirements.txt  seed_dev_data.py  validate_e2e.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial.py  002_add_workflow_tables.py  003_add_printing_tables.py  004_add_imei_to_jobs.py  005_add_ticket_id.py  006_add_integration_tables.py  007_add_sla_fields.py  008_add_inventory.py  009_refactor_device_model.py  010_normalize_device_structure.py  011_manual_overrides.py
apps/api/src/veriqko/: config.py  enums.py  main.py  models.py
apps/api/src/veriqko/auth/: jwt.py  service.py
apps/api/src/veriqko/cron/: sla_checker.py
apps/api/src/veriqko/db/: base.py
apps/api/src/veriqko/devices/: models.py  router.py  schemas.py
apps/api/src/veriqko/errors/: exceptions.py
apps/api/src/veriqko/evidence/: models.py  router.py  schemas.py  storage.py
apps/api/src/veriqko/health/: router.py
apps/api/src/veriqko/integrations/: email.py  erp_mock.py  models.py  router.py  schemas.py  service.py
apps/api/src/veriqko/jobs/: models.py  router.py  schemas.py  security.py  service.py  state_machine.py
apps/api/src/veriqko/parts/: models.py  router.py  schemas.py
apps/api/src/veriqko/printing/: models.py  (+2 more)
apps/api/src/veriqo/: config.py  dependencies.py  enums.py  main.py  models.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_jobs.py  test_reports.py
apps/api/tests/unit/: test_picea.py  test_storage.py
(+125 files in other folders)
